# logwatch-threat-detector

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/reports/: report.html  report.json
src/logwatch/: __init__.py  analyzer.py  cli.py  models.py
src/logwatch/api/: __init__.py  main.py
src/logwatch/detection/: __init__.py  engine.py
src/logwatch/parsers/: __init__.py  ssh.py
src/logwatch/reporting/: __init__.py  html.py  json_report.py
tests/: test_analyzer.py  test_api.py  test_detection.py  test_parser.py
